# brand-scraper

./: .gitignore  README.md
backend/: .gitignore  pyproject.toml
backend/app/: brands.py  categories.py  login_session.py  main.py  models.py  paths.py  runner.py  scraper.py  session.py  settings.py  storage.py
backend/scripts/: lazada_dom_probe.py  lazada_spike.py  shopee_cat_landing_probe.py  shopee_fe_category_detail_probe.py  shopee_login.py  shopee_probe_pagination_v2.py  shopee_product_spike.py
backend/scripts/lazada_spike_captures/: 001_g_alicdn_com__manifest_sg.headers.json  001_g_alicdn_com__manifest_sg.json  002_member_lazada_sg__api_getContextInfo.headers.json  002_member_lazada_sg__api_getContextInfo.json  003_member_lazada_sg__api_getCsrfToken.headers.json  003_member_lazada_sg__api_getCsrfToken.json  004_cart_lazada_sg__api_count.headers.json  004_cart_lazada_sg__api_count.json  005_acs-m_lazada_sg__mtop.lazada.member.user.biz.getuser_1.headers.json  005_acs-m_lazada_sg__mtop.lazada.member.user.biz.getuser_1.json  007_member_lazada_sg__api_getUser.json  (+49 more)
backend/tests/: conftest.py  test_brands.py  test_enrichment_endpoints.py  test_enrichment_history.py  test_enrichment_logs_endpoint.py  test_enrichments.py  test_lazada_extract.py  test_lazada_metadata.py  test_lazada_scraper.py  test_logs_endpoint.py  test_models.py  test_official_site.py  test_official_site_enrichment.py  test_official_site_extract_with_llm.py  test_runner_product_update.py  test_session.py  test_shopee_enrichment.py  test_shopee_rcmd_items_harvest.py  test_unified_table_columns.py
(+37 files in other folders)
