[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "browser-use>=0.12.6",
    "fastapi>=0.135.3",
    "langchain-openai>=1.1.9",
    "markdownify>=0.11.6",
    "patchright>=1.58.2",
    "platformdirs>=4.3",
    "playwright>=1.58.0",
    "pydantic>=2.12.5",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
